update kafka and autofac

--- a/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
+++ b/Src/Sample/Sample.CommandServiceCore/Views/Home/Test.cshtml
@@ -296,7 +296,7 @@
             
             updateTps();
 
-            setInterval(updateTps, updateInterval * 1000);
+            //setInterval(updateTps, updateInterval * 1000);
 
         });
         var refreshCommandDistributorStatus = function() {
